# hackathon-backend

./: .env.template  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  api-spec.md  conftest.py  docker-compose.yml  fixtures.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1f6caca61631_volunteer_service_profile_and_ticket.py  37e5086635ee_userrole.py  3f67241b95b1_add_chat_models.py  7e7e96fd3366_volunteer_review_model.py  ac7e8b045176_volunteer_profile_user_foreign_key.py  bab96c6e65c9_.py  d1ed45a4c00a_ticket_title.py  d3eb34ed6a4e_add_volunteer_profile_service_and_ticket.py  d44536341b56_add_unique_to_user_foreign_key.py  daefb8b27755_volunteer_review.py  e03624f77a80_add_otp_fields.py  e2d147175ed5_ticket_status.py  e567f4b93108_.py  e9c1fcbff4ac_user_model.py
scripts/: dev-entrypoint.sh
src/: __init__.py  app.py  db.py
src/data_access/: base.py  chat.py  jwt.py  message.py  service.py  ticket.py  user.py  volunteer_profile.py
src/enums/: chat.py  jwt.py  roles.py  ticket.py
src/exceptions/: data_access.py  jwt.py  user.py
src/models/: chat.py  jwt.py  services.py  ticket.py  ticketmodel.py  user.py  volunteer_profile.py  volunteer_review.py
src/routes/: chat.py  city.py  services.py  ticket.py  token.py  user.py  volunteer_profile.py
src/schemas/: base.py  city.py  paging.py  review.py  user.py
src/schemas/chat/: data_access.py  dto.py
src/schemas/jwt/: data_access.py  dto.py
src/schemas/message/: data_access.py
src/schemas/service/: data_access.py  dto.py
src/schemas/ticket/: data_access.py  dto.py
src/schemas/user/: data_access.py  dto.py
src/schemas/volunteer_profile/: data_access.py  dto.py
src/services/: chat.py  jwt.py  review.py  ticket.py  user.py  volunteer_profile.py
src/settings/: __init__.py  aws.py  db.py  general.py  jwt.py  paging.py
src/utils/: cities.py  images.py  jwt.py  location.py  schemas.py  sns.py
tests/integration/: conftest.py
tests/integration/test_data_access/: test_user_data_access.py
tests/integration/test_routes/: test_token.py  test_user.py
