[tool.poetry]
name = "hackathon-backend"
version = "0.1.0"
description = "hackathon-backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
SQLAlchemy = {extras = ["async"], version = "^1.4.41"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
alembic = "^1.8.1"
asyncpg = "^0.26.0"
pydantic = {extras = ["email"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.9.0"
pytest_async = "^0.1.1"
pytest-xdist = "^2.5.0"
isort = "^5.10.1"
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.env
  | \.venv
  | venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
lines_after_imports = 2
skip_glob = ["**/env/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
